--- a/Prediction.Rmd
+++ b/Prediction.Rmd
@@ -1,13 +1,12 @@
 ---
-title: "Midterm Assignemnt, ME314 2018"
+title: "ME314 2018"
 output: html_document
 ---
  
 ![](images/lse-logo.jpg)
 
-#### Summer School 2018 midsession examination  
 
-# ME314 Introduction to Data Science and Big Data 
+# ME314 Data Science and Big Data 
 
 ## Suitable for all candidates
 
